--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<img src="src/banner1.jpg" width="100%" height="600px" alt="image-banner">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>This is Article title.</h1>
+    <img src="src/banner1.jpg" width="100%" height="600px" alt="image-banner">    
+</body>
+</html>
+
+
+
+
